# tython

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  commands.txt  config.h  main.cpp
benchmark/prof/: nbody.prof  nbody.ps  perf_nbody_python.txt  perf_nbody_tython.txt
benchmark/src/: nbody.ty  nbody_subscript_references.ty
benchmarks/: run.sh
benchmarks/results/: codon_benchmark_results.aux  codon_benchmark_results.tex  cpython_benchmark_results.aux  cpython_benchmark_results.tex  tython_benchmark_results.aux  tython_benchmark_results.tex
benchmarks/src/: fibonacci_recursive.py  fibonacci_recursive.ty  fibonacci_while.ty  nbody.py  nqueens.py  pi.ty  sieve.py
benchmarks/tython_std/: io.ty
demo/: tagged_union_type_check_constant_propagation.ll
grammar/: Tython.g4  TythonLexer.g4  TythonParser.g4
include/exception/: UnkownSymbolException.h
include/ir/: TythonBuilder.h  TythonModule.h
include/lexer/: TythonLexerBase.h
include/model/: Context.h  Namespace.h  Scope.h  Value.h  Variable.h
include/utils/: Utils.h
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt  class.c  object.c  type.c
lib/src/api/: api.c
lib/src/bridge/: basicland.c
lib/src/builtin/: dictionary.c
lib/src/error/: error.c
lib/src/function/: userfunctions.c
lib/src/object/: basicland.c  boolobject.c  classobject.c  dictionaryobject.c  dictobject.c  floatobject.c  functionobject.c  integerobject.c  listobject.c  noneobject.c  rangeobject.c  sliceobject.c  stringobject.c  tupleobject.c
notes/: future_work.txt
src/: main.cpp
test/: helloworld.c  nbody.ty  scratch.ir  scratch.ty  temp.ir
tython_std/: io.ty  util.ty
(+60 files in other folders)
